fix : exam_participants table empty spec_id issue